deploy/okd/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: mic3-api
  labels:
    app.kubernetes.io/name: mic3-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mic3-api
    app.kubernetes.io/component: api
  ports:
  - name: http
    port: 8000
    targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mic3-api
  labels:
    app.kubernetes.io/name: mic3-api
spec:
  to:
    kind: Service
    name: mic3-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
